# 2023-01-12-DGGAN-in-pytorch-cpp-and-CMake-practice

./: .gitignore  CMakeLists.txt  README.md  models.py
app/: CMakeLists.txt  main.cpp
models/: net.pt
nets/: CMakeLists.txt
nets/include/nets/: dcgan.h  net.h
opencv_and_torch/: CMakeLists.txt  main.cpp
pymodel_to_cpp/: CMakeLists.txt  main.cpp
